--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+    <head>
+      <title>Riyadh</title>
+    </head>
     <!-- SUB HEAD -->
 
     <div id="content">
