Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     </head>
     <!-- SUB HEAD -->
 
-    <div id="content">
+    <div id="content" style="background-image: ./images/backgrounds/architecture.jpg;">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+
     </div>
   </div>
 </body>
