Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="wrapper" style="background-image: ./images/backgrounds/architecture.jpg;">
     <!-- HEADER -->
-    <head>
-      <title>Riyadh</title>
-    </head>
+    <h1>Welcome to Riydah</h1>
     <!-- SUB HEAD -->
-
-    <div id="content" style="background-image: ./images/backgrounds/architecture.jpg;">
+    <h3>Where a traditional past meets a modern future</h3>
+    <div id="content" >
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
 
     </div>
