Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Riydah</h1>
     <!-- SUB HEAD -->
     <h3>Where a traditional past meets a modern future</h3>
-    <div id="content" >
+    <div id="content" style="background-color: white;">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
 
     </div>
