--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>Where a traditional past meets a modern future</h3>
     <div id="content" style="background-color: white;">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-
+      <img src="./images/transportation/transit.jpg" alt="transit">
     </div>
   </div>
 </body>
