--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <!-- HEADER -->
     <h1>Welcome to Riydah</h1>
     <!-- SUB HEAD -->
-    <h3>Where a traditional past meets a modern future</h3>
+    <h2>Where a traditional past meets a modern future</h2>
     <div id="content" style="background-color: white;">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/transit.jpg" alt="transit">
+      <h3>Travel</h3>
+      <p></p>
+      <h3>History</h3>
     </div>
   </div>
 </body>
