Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <h3>Travel</h3>
       <p></p>
       <h3>History</h3>
+      <p></p>
+      <img src="./images/garden.jpg" alt="">
     </div>
   </div>
 </body>
