Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <p></p>
       <h3>History</h3>
       <p></p>
-      <img src="./images/garden.jpg" alt="">
+      <img src="./images/garden.jpg" alt="garden">
+      <p></p>
+      <img src="./images/transportation/camels-in-truck.jpg" alt="camels in truck">
     </div>
   </div>
 </body>
