Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <img src="./images/garden.jpg" alt="garden">
       <p></p>
       <img src="./images/transportation/camels-in-truck.jpg" alt="camels in truck">
+      <h3>Sources</h3>
+      <p>Lonely Planet</p>
+      <p>Wikipedia</p>
     </div>
   </div>
 </body>
