Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p></p>
       <img src="./images/transportation/camels-in-truck.jpg" alt="camels in truck">
       <h3>Sources</h3>
-      <p>Lonely Planet /r/n Wikipedia</p>
+      <p>Lonely Planet <br> Wikipedia</p>
       <p>Wikipedia</p>
     </div>
   </div>
