--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/transit.jpg" alt="transit">
       <h3>Travel</h3>
-      <p></p>
+      <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium. Qui animated corpse, cricket bat max brucks terribilem incessu zomby. The voodoo sacerdos flesh eater, suscitat mortuos comedere carnem virus. Zonbi tattered for solum oculi eorum defunctis go lum cerebro. Nescio brains an Undead zombies. Sicut malus putrid voodoo horror. Nigh tofth eliv ingdead.</p>
       <h3>History</h3>
       <p></p>
       <img src="./images/garden.jpg" alt="garden">
       <p></p>
       <img src="./images/transportation/camels-in-truck.jpg" alt="camels in truck">
       <h3>Sources</h3>
-      <p>Lonely Planet <br> Wikipedia</p>
-      <p>Wikipedia</p>
+      <p>
+        Lonely Planet 
+        <br> 
+        Wikipedia
+      </p>
     </div>
   </div>
 </body>
