--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper" style="background-image: ./images/backgrounds/architecture.jpg;">
     <!-- HEADER -->
-    <h1>Welcome to Riydah</h1>
+    <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
     <h2>Where a traditional past meets a modern future</h2>
     <div id="content" style="background-color: white;">
