Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-    <h2>Where a traditional past meets a modern future</h2>
+    <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content" style="background-color: white;">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/transit.jpg" alt="transit">
