--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
       <img src="./images/transportation/transit.jpg" alt="transit">
       <h3>Travel</h3>
-      <p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro.
+      <p>Once a mudbrick waystation Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro.
         De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo
         vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris.
         Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus
