--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         oculis aliorum sicut serpere crabs nostram. Putridi braindead odores kill and
         infect, aere implent left four dead.</p>
       <img src="./images/garden.jpg" alt="garden">
-      <p>Lucio fulci tremor est dark vivos magna. Expansis creepy arm yof darkness
+      <p> The city is divided into 15 municipal districts Lucio fulci tremor est dark vivos magna. Expansis creepy arm yof darkness
         ulnis witchcraft missing carnem armis Kirkman Moore and Adlard caeruleum in
         locis. Romero morbo Congress amarus in auras. Nihil horum sagittis tincidunt,
         zombie slack-jawed gelida survival portenta. The unleashed virus est, et iam
