--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <img src="./images/transportation/camels-in-truck.jpg" alt="camels in truck">
       <h3>Sources</h3>
       <p>
-        Lonely Planet
+        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
         <br>
-        Wikipedia
+        <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
       </p>
     </div>
   </div>
